[package]
name = "opentalk"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
hex = "0.4.3"
openssl = "0.10.68"
rand = "0.8.5"
rsa = "0.9.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["io-util", "net", "rt", "rt-multi-thread"] }
